# trailmark

./: README.md  pyproject.toml
.github/workflows/: ci.yml  mutation.yml  publish.yml  zizmor.yml
src/trailmark/: __init__.py  parse.py
src/trailmark/analysis/: entrypoints.py
src/trailmark/parsers/: _common.py  _simple.py
src/trailmark/parsers/erlang/: parser.py
src/trailmark/parsers/func/: __init__.py  parser.py
src/trailmark/parsers/graphql/: __init__.py  parser.py
src/trailmark/parsers/move/: __init__.py  parser.py
src/trailmark/parsers/proto/: __init__.py  parser.py
src/trailmark/parsers/rego/: __init__.py  parser.py
src/trailmark/parsers/sway/: __init__.py  parser.py
src/trailmark/parsers/tact/: __init__.py  parser.py
src/trailmark/parsers/thrift/: __init__.py  parser.py
tests/: test_common_parser.py  test_entrypoints.py  test_kat_parsers.py  test_new_language_parsers.py  test_package_metadata.py  test_parse_api.py  test_readme.py
tests/fixtures/kat/func/: taxonomy.expected.json  taxonomy.fc
tests/fixtures/kat/graphql/: taxonomy.expected.json  taxonomy.graphql
tests/fixtures/kat/move/: taxonomy.expected.json  taxonomy.move
tests/fixtures/kat/proto/: taxonomy.expected.json  taxonomy.proto
tests/fixtures/kat/rego/: taxonomy.expected.json  taxonomy.rego
tests/fixtures/kat/sway/: taxonomy.expected.json  taxonomy.sw
tests/fixtures/kat/tact/: taxonomy.expected.json  taxonomy.tact
tests/fixtures/kat/thrift/: taxonomy.expected.json  taxonomy.thrift
